// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceLockup dollarSign size is H1, dollarValue will be DisplayH1, rateText is large, topText is large, bottomText is absent, when size Prop is large 1`] = `
<PriceLockup
  bottomText="great"
  price="25"
  rateText="/month"
  signDirection="left"
  size="large"
  topText="buy"
>
  <div>
    <TopText>
      <Text
        block={false}
        bold={false}
        invert={false}
        size="large"
      >
        <span
          className="TDS_Typography-modules__large___3Z5sJ TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__largeFont___3fZLf TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__color___1Jt_W"
        >
          buy
        </span>
      </Text>
    </TopText>
    <div
      className="priceWrapper"
    >
      <PriceValueSign>
        <span
          className="priceValueSign"
        >
          <DollarSign>
            <h1
              className="dollarSignH1Style"
            >
              $
            </h1>
          </DollarSign>
          <DollarValue>
            <Heading
              invert={false}
              level="h1"
            >
              <h1
                className="TDS_Heading-modules__h1___1iaO2 TDS_Typography-modules__wordBreak___3dmWU TDS_Spacing-modules__noSpacing___XPYDG TDS_Heading-modules__secondary___3skcz"
              >
                25
              </h1>
            </Heading>
          </DollarValue>
        </span>
      </PriceValueSign>
      <RateText>
        <div
          className="rateWrapperMedium"
        >
          <Text
            block={false}
            bold={false}
            invert={false}
            size="large"
          >
            <span
              className="TDS_Typography-modules__large___3Z5sJ TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__largeFont___3fZLf TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__color___1Jt_W"
            >
              /month
            </span>
          </Text>
        </div>
      </RateText>
    </div>
    <Hairline />
  </div>
</PriceLockup>
`;

exports[`PriceLockup dollarSign size is large, dollarValue will be H1, rateText is medium, topText is small, with HairlineDivider bottomText is medium, when size Prop is medium 1`] = `
<PriceLockup
  bottomText="great"
  price="25"
  rateText="/month"
  signDirection="left"
  size="medium"
  topText="buy"
>
  <div>
    <TopText>
      <Text
        block={false}
        bold={false}
        invert={false}
        size="small"
      >
        <span
          className="TDS_Typography-modules__small___3H68Z TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__smallFont___XkTI5 TDS_Typography-modules__color___1Jt_W"
        >
          buy
        </span>
      </Text>
    </TopText>
    <div
      className="priceWrapper"
    >
      <PriceValueSign>
        <span
          className="priceValueSign"
        >
          <DollarSign>
            <Text
              block={false}
              bold={false}
              invert={false}
              size="large"
            >
              <span
                className="TDS_Typography-modules__large___3Z5sJ TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__largeFont___3fZLf TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__color___1Jt_W"
              >
                $
              </span>
            </Text>
          </DollarSign>
          <DollarValue>
            <Heading
              invert={false}
              level="h1"
            >
              <h1
                className="TDS_Heading-modules__h1___1iaO2 TDS_Typography-modules__wordBreak___3dmWU TDS_Spacing-modules__noSpacing___XPYDG TDS_Heading-modules__secondary___3skcz"
              >
                25
              </h1>
            </Heading>
          </DollarValue>
        </span>
      </PriceValueSign>
      <RateText>
        <div
          className="rateWrapperMedium"
        >
          <Text
            block={false}
            bold={false}
            invert={false}
            size="medium"
          >
            <span
              className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__color___1Jt_W"
            >
              /month
            </span>
          </Text>
        </div>
      </RateText>
    </div>
    <Hairline>
      <div
        className="hairlineWrapper"
      >
        <HairlineDivider
          gradient={false}
          vertical={false}
        >
          <hr
            className="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
          />
        </HairlineDivider>
      </div>
    </Hairline>
    <BottomText>
      <Text
        block={false}
        bold={false}
        invert={false}
        size="medium"
      >
        <span
          className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__color___1Jt_W"
        >
          great
        </span>
      </Text>
    </BottomText>
  </div>
</PriceLockup>
`;

exports[`PriceLockup dollarSign size is medium, dollarValue will be H2, rateText is medium, topText is small, bottomText is absent, when size Prop is small 1`] = `
<PriceLockup
  bottomText="great"
  price="25"
  rateText="/month"
  signDirection="left"
  size="small"
  topText="buy"
>
  <div>
    <TopText>
      <Text
        block={false}
        bold={false}
        invert={false}
        size="small"
      >
        <span
          className="TDS_Typography-modules__small___3H68Z TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__smallFont___XkTI5 TDS_Typography-modules__color___1Jt_W"
        >
          buy
        </span>
      </Text>
    </TopText>
    <div
      className="priceWrapper"
    >
      <PriceValueSign>
        <span
          className="priceValueSign"
        >
          <DollarSign>
            <Text
              block={false}
              bold={false}
              invert={false}
              size="medium"
            >
              <span
                className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__color___1Jt_W"
              >
                $
              </span>
            </Text>
          </DollarSign>
          <DollarValue>
            <Heading
              invert={false}
              level="h2"
            >
              <h2
                className="TDS_Heading-modules__h2___l3LmI TDS_Typography-modules__wordBreak___3dmWU TDS_Spacing-modules__noSpacing___XPYDG TDS_Heading-modules__secondary___3skcz"
              >
                25
              </h2>
            </Heading>
          </DollarValue>
        </span>
      </PriceValueSign>
      <RateText>
        <div
          className="rateWrapperSmall"
        >
          <Text
            block={false}
            bold={false}
            invert={false}
            size="medium"
          >
            <span
              className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__color___1Jt_W"
            >
              /month
            </span>
          </Text>
        </div>
      </RateText>
    </div>
    <Hairline />
  </div>
</PriceLockup>
`;

exports[`PriceLockup renders 1`] = `
<div>
  <TopText />
  <div
    className="priceWrapper"
  >
    <PriceValueSign />
    <RateText />
  </div>
  <Hairline />
</div>
`;
